# zarrita

./: .gitignore  BENCHMARK.md  LICENSE  README.md  TODO.md  build.py  check.sh  pyproject.toml  requirements.txt  setup.py  sharding_test.py  test.py  test_all.py  test_perf.py  zarr_v3.py  zarr_v3_spike.py  zarrita.py
.github/workflows/: python-app.yml
tests/: test_perf.py  test_readme.py  test_store.py  test_v2.py  test_v3.py
zarrita/: __init__.py  array.py  array_v2.py  blosc.c  blosc.pyx  codecs.py  common.py  group.py  group_v2.py  indexing.py  metadata.py  sharding.py  store.py  sync.py  value_handle.py
