[tool.poetry]
name = "zarrita"
version = "0.2.1"
description = ""
authors = ["Norman Rzepka <code@normanrz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fsspec = ">=2022.0.0"
numpy = "^1.22"
numcodecs = "^0.11.0"
cattrs = ">=22.2.0"
attrs = ">=22.2.0"
crc32c = ">=2.3"
zstandard = "^0.21.0"

[tool.poetry.group.dev.dependencies]
wkw = "^1.1.22"
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
pudb = "^2022.1.3"
zarr = "^2.14.2"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.271"
s3fs = ">=2022.0.0"
universal_pathlib = "^0.1.0"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
